<resources>
    <string name="app_name">Deudor APP</string>
    <string name="title_create">Crear Deudor</string>
    <string name="title_read">Buscar Deudor</string>
    <string name="title_update">Actualizar Deudores</string>
    <string name="title_delete">Eliminar Deudor</string>

    <string name="bot_create">Crear</string>
    <string name="bot_read">Buscar</string>
    <string name="bot_update">Actualizar</string>
    <string name="bot_delete">Borrar</string>
    <string name="bot_list">Lista</string>

    <string name="title_lista">Lista de Deudores</string>
    <string name="nombre">Ingrese Nombre</string>
    <string name="telefono">Ingrese Telefono</string>
    <string name="cantidad">Ingrese Cantidad</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="nombre_list">NOMBRE</string>
    <string name="deuda_list">DEUDA</string>

    <string name="todo">TODO</string>

    <string name="correo">Correo electrónico:</string>
    <string name="contrasena_login">Contraseña:</string>
    <string name="titulo_login">INICIA SESIÓN A TU CUENTA</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta">"Crear cuenta "</string>

    <string name="titulo">Registro de cuenta</string>
    <string name="contrasena">Contraseña: Mínimo 6 dígtos</string>
    <string name="contrasenax2">Repetir Contraseña:</string>
    <string name="registrar">Registrar</string>



</resources>