<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />

            <EditText
                android:id="@+id/et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />

            <EditText
                android:id="@+id/et_contrasenax2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/contrasenax2"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />

            <Button
                android:id="@+id/bt_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:fontFamily="monospace"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>



